user-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: localhost:5000/userservice:v0.2.3
          ports:
            - containerPort: 5001
