user-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 5001
