user-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
spec:
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
          - path: /message
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
